# CeresSim3Optimize

./: .gitignore  CMakeLists.txt  DataStruct.h  MainWidget.cpp  README.md  Sphere.cpp  Sphere.h  main.cpp  sphereScene.cpp
data/: ceres_sphere_data.g2o  frames.txt  orb_sphere_data.g2o  residuals.txt  sim3_sphere_data.g2o
include/: DataStruct.h  MainWidget.h  QtScene.h  Sim3Optimizer.h  Sphere.h  sphereScene.h
src/: MainWidget.cc  MainWidget.cpp  QtScene.cc  Sim3Optimizer.cc  Sphere.cpp  main.cc  sphereScene.cpp
